# estrattoconto

./: .gitignore  CLAUDE.md  CREATING_ISSUES.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MULTI_BANK_STRATEGY.md  PLANNING_README.md  PR_DESCRIPTION.md  QUICK_START_MULTI_BANK.md  README.md  ROADMAP.md  TASKS.md  TESTING_STRATEGY.md  create_issues.py  create_issues.sh  main.py  pyproject.toml
.github/workflows/: pylint.yml
docs/implementation/: hybrid-approaches.md  phase-1-bugfixes.md  phase-2-providers.md  phase-3-performance.md  phase-4-ml.md  phase-5-django.md
estrattoconto/: __init__.py  __main__.py  __version__.py  config.py  converter.py  enrichment.py  statement.py  utils.py
examples/: README.md  basic_usage.py
src/: config.py
src/estrattoconto/: __init__.py  config.py  statement.py
tests/: __init__.py  out_extractor.py  test_converter.py  test_enrichment.py  test_statement.py  test_utils.py
