[tool.poetry]
name = "estrattoconto"
version = "0.1.0"
description = ""
authors=["contributors"]
readme = "README.md"
packages = [{include = "estrattoconto"}]

[tool.poetry.dependencies]
python = "^3.10"
docling = "^2.58.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
